# ps2_drivers

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: compilation.yml
include/: irx_common_macros.h  ps2_all_drivers.h  ps2_audio_driver.h  ps2_bdm_driver.h  ps2_camera_driver.h  ps2_cdfs_driver.h  ps2_dev9_driver.h  ps2_eeip_driver.h  ps2_fileXio_driver.h  ps2_filesystem_driver.h  ps2_hdd_driver.h  ps2_iopip_driver.h  ps2_joystick_driver.h  ps2_keyboard_driver.h  ps2_memcard_driver.h  ps2_mouse_driver.h  ps2_mx4sio_driver.h  ps2_netman_driver.h  ps2_network_driver.h  ps2_poweroff_driver.h  ps2_sio2man_driver.h  ps2_smap_driver.h  ps2_usb_driver.h  ps2_usbd_driver.h
samples/: CMakeLists.txt
samples/alldrivers_sample/: CMakeLists.txt  Makefile.sample  alldrivers_sample.c
samples/alldrivers_verbose_sample/: CMakeLists.txt  Makefile.sample  alldrivers_verbose_sample.c
samples/basic_elf_loader/: CMakeLists.txt  Makefile.sample  basic_elf_loader.c  elf_path.ini
samples/filesystem_sample/: CMakeLists.txt  Makefile.sample  filesystem_sample.c
samples/hdd_sample/: CMakeLists.txt  Makefile.sample  hdd_sample.c
samples/listdir_sample/: CMakeLists.txt  Makefile.sample  listdir_sample.c
samples/mtap_sample/: CMakeLists.txt  Makefile.sample  mtap_sample.c
samples/openfile_sample/: Makefile.sample  openfile_sample.c
samples/poweroff_sample/: CMakeLists.txt  Makefile.sample  poweroff_sample.c
samples/showiopinfo_sample/: CMakeLists.txt  Makefile.sample  showiopinfo_sample.c
samples/wav_sample/: CMakeLists.txt  Makefile.sample  wav_sample.c
src/: ps2_audio_driver.c  ps2_bdm_driver.c  ps2_camera_driver.c  ps2_cdfs_driver.c  ps2_dev9_driver.c  ps2_eeip_driver.c  ps2_fileXio_driver.c  ps2_filesystem_driver.c  ps2_hdd_driver.c  ps2_iopip_driver.c  ps2_joystick_driver.c  ps2_keyboard_driver.c  ps2_memcard_driver.c  ps2_mouse_driver.c  ps2_mx4sio_driver.c  ps2_netman_driver.c  ps2_poweroff_driver.c  ps2_sio2man_driver.c  ps2_smap_driver.c  ps2_usb_driver.c  ps2_usbd_driver.c
